2025-03-24  Zhengyi Fu  <i@fuzy.me>

	* init.el (prism-project): Better predicate and default values.

2025-03-24  Zhengyi Fu  <i@fuzy.me>

	Add command for enabling `prism-mode' in projects

	* init.el (prism-project): New command.
	(prism-project-mode-history): New variable.

2025-03-23  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add package AUCTeX.

2025-03-23  Zhengyi Fu  <i@fuzy.me>

	Set `file-name-handler-alist' to nil during startup

	* init.el (+saved-file-name-handler-alist): New variable.  Save
	value for `file-name-handler-alist' during startup.

2025-03-23  Zhengyi Fu  <i@fuzy.me>

	Implement a project-specific hook mechanism

	* init.el (+citre--enable): Removed function.
	(+citre--managed-hook, +citre--enable): Removed variables.
	(+citre-enable): Use `project-add-hook!'.

	* site-lisp/dotemacs-core.el (dotemacs--project-hook-function)
	(project-add-hook!): New functions.
	(dotemacs--project-hooks): New variable.

2025-03-21  Zhengyi Fu  <i@fuzy.me>

	Manage citre-mode like eglot

	* init.el: Removed `citre-auto-enable-citre-mode' from `find-file-hook'.
	Do not turn on `citre-mode' automatically.
	(+citre--managed-project-modes, +citre--managed-hook): New variables.
	(+citre--enable, +citre--get-major-modes-for-citre): New functions.
	(+citre-enable): New command.

2025-03-21  Zhengyi Fu  <i@fuzy.me>

	* init.el <consult-eglot>: Remap `xref-find-apropos' to
	`consult-eglot-symbols' in `eglot-mode-map'.

2025-03-21  Zhengyi Fu  <i@fuzy.me>

	* init.el (+prism--set-colors): Blend string colors with the
	foreground color instead of white.

2025-03-21  Zhengyi Fu  <i@fuzy.me>

	Rename `consult-eglot--async-wrap' to `+consult--async-wrap--split-space'

	* init.el (+consult--async-wrap--split-space): Renamed from
	`consult-eglot--async-wrap'.  The only caller is changed.

2025-03-21  Zhengyi Fu  <i@fuzy.me>

	Add package `prism'

	* packages.el (prism): Add package.

	* init.el: Add `prism-mode' to `eglot-managed-mode-hook'.